--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ twitter_username: # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: mirco-planamente-924893198 # your LinkedIn user name
 telegram_username: # your Telegram user name
-scholar_userid: GIJ3h4AAAAAJ&hl # your Google Scholar ID
+scholar_userid: https://scholar.google.com/citations?user=GIJ3h4AAAAAJ&hl=en # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
