--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,15 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - plana93
+  - EgocentricVision
+  - N-ROD-dataset
+  - MRLoghmani
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - MRLoghmani/rcfusion
+  - MRLoghmani/relative-rotation
+  - N-ROD-dataset/home
+  - EgocentricVision/EgocentricVision
+  - EgocentricVision/N-EPIC-Kitchens
+  - EgocentricVision/EgoWild
+
+
