--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -16,11 +16,8 @@
       year: 2023
       description:
         - Supervisors: Barbara Caputo, Andrea Bottino
-        - Description 2.
         - title: Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
+        - Degree mark: 110/110 cum laude
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
