--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,9 +15,9 @@
       institution: Polytechnic of Turin, Italy
       year: 2023
       description:
-        - Supervisors: Barbara Caputo, Andrea Bottino
-        - title: Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition
-        - Degree mark: 110/110 cum laude
+          Supervisors: Barbara Caputo, Andrea Bottino
+          title: Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition
+          Degree mark: 110/110 cum laude
     - title: Federal teaching diploma
       institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
       year: 1900
